arrow en savoir plus

--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -473,6 +473,10 @@
                         
                                             .owl-next {
                                                 right: -10px;
+
+                                                @media (max-width: 990px) {
+                                                    right: 10px;
+                                                }
                                             }
 
                                             .owl-prev {
