arrow en savoir plus left

--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -482,6 +482,10 @@
                                             .owl-prev {
                                                 left: -10px;
 
+                                                @media (max-width: 990px) {
+                                                    left: 10px;
+                                                }
+
                                             }
 
                                             .disabled {
