--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -362,6 +362,11 @@
                                                     width: 81px;
                                                     height: 26px;
                                                 }
+
+                                                .int_yuka {
+                                                    font-size: 24px;
+                                                    margin-left: 10px;
+                                                }
                                             }
                                             .product-nutriscore {
                                                 display: flex;
@@ -783,6 +788,25 @@
                 @media (max-width: 480px) {
                     margin-bottom: 90px;
                 }
+
+                .product-miniature {
+                    .product-img {
+                        width: 290px;
+                        height: 290px;
+
+                        @media (min-width: 769px) and (max-width: 960px) {
+                            max-width: 290px;
+                            max-height: 290px;
+                        }
+
+                        @media (max-width: 769px) {
+                            max-width: 355px;
+                            max-height: 355px;
+                        }
+
+
+                    }
+                }
                 
             }
             .product-description {
@@ -904,17 +928,6 @@
                         }
                     }                            
 
-                    // .product-quantity {
-                    //     .qty {
-                    //         .input-group {
-                    //             .input-group-btn-vertical {
-                    //                 .btn {
-                    //                     border: 1px solid rgba(0,0,0,.25);
-                    //                 }
-                    //             }
-                    //         }
-                    //     }
-                    // }
                 }
             }
             .product-price-and-shipping {
