--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -76,7 +76,7 @@
         input[type=text] {
             display: block;
             width: calc(100% - 80px);
-            padding: 15px 40px 0 40px;
+            padding: 15px 0 0;
             margin-left: 40px;
             border: none;
             border-bottom: 1px solid;
@@ -84,6 +84,12 @@
         }
         button[type=submit] {
             left: 30px;
+
+            span {
+                position: absolute;
+                bottom: -7px;
+                right: 20px;
+            }
         }
         .close {
             position: absolute;
