--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -76,10 +76,11 @@
         input[type=text] {
             display: block;
             width: calc(100% - 80px);
-            padding: 15px 0 0;
+            padding: 15px 10px 0;
             margin-left: 40px;
             border: none;
             border-bottom: 1px solid;
+            border-radius: 0;
             outline: 0;
         }
         button[type=submit] {
@@ -89,6 +90,7 @@
                 position: absolute;
                 bottom: -7px;
                 right: 20px;
+                color: black;
             }
         }
         .close {
