frais de port bolder

--- a/assets/scss/command.scss
+++ b/assets/scss/command.scss
@@ -28,7 +28,8 @@
                         margin-bottom: 0;
                     }
                     .free {
-                        font-size: 12px;
+                        font-size: 14px;
+                        font-weight: bold;
                     }
                     .cart-content-btn {
                         button {
