--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -150,6 +150,17 @@
 
 @media (min-width: 1200px) {
     #header {
+        .header-banner {
+            background-color: $pink;
+            padding: 10px 0;
+
+            p {
+                text-align: center;
+                margin-bottom: 0;
+                color: #000;
+                font-weight: bold;
+            }
+        }
         .header-nav {
             max-height: 100%;
             margin-top: 80px;
