--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -151,7 +151,7 @@
 @media (min-width: 1200px) {
     #header {
         .header-banner {
-            background-color: $grey;
+            background-color: #d4795e;
             padding: 10px 0;
             position: relative;
 
@@ -160,6 +160,7 @@
                 margin-bottom: 0;
                 color: $white;
                 font-weight: bold;
+                letter-spacing: 0.5px;
             }
         }
         .header-nav {
