--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -151,7 +151,7 @@
 @media (min-width: 1200px) {
     #header {
         .header-banner {
-            background-color: #d4795e;
+            background-color: #FCE8D9;
             padding: 10px 0;
             position: relative;
 
