--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -158,7 +158,7 @@
             p {
                 text-align: center;
                 margin-bottom: 0;
-                color: $white;
+                color: $black;
                 font-weight: bold;
                 letter-spacing: 0.5px;
             }
