--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -145,6 +145,19 @@
     }
 }
 
+.header-banner {
+    background-color: #FCE8D9;
+    padding: 10px 0;
+    position: relative;
+
+    p {
+        text-align: center;
+        margin-bottom: 0;
+        color: $black;
+        letter-spacing: 0.5px;
+        font-size: 17px;
+    }
+}
 
 /* Header */
 
