--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -564,3 +564,20 @@
     width: 1159px;
     margin: 60px auto;
 }
+
+/* Contact */
+.contact-form {
+    section {
+        .form-group {
+            .group-span-filestyle {
+                > label {
+                    height: 38px;
+
+                    .buttonText {
+                        line-height: 18px;
+                    }
+                }
+            }
+        }
+    }
+}
