--- a/assets/scss/category.scss
+++ b/assets/scss/category.scss
@@ -298,6 +298,11 @@
                         position: absolute;
                         top: -24px;
                         right: 0;
+
+                        span {
+                            font-size: 16px;
+                            font-family: $roboto;
+                        }
                     }
                     .price {
                         font-family: $roboto;
