--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -282,6 +282,11 @@
                                 position: absolute;
                                 top: -24px;
                                 right: 0;
+
+                                span {
+                                    font-size: 16px;
+                                    font-family: $roboto;
+                                }
                             }
                             .price {
                                 font-family: $roboto;
