--- a/assets/scss/theme.css
+++ b/assets/scss/theme.css
@@ -9743,7 +9743,8 @@ body#checkout #hook-display-after-carrier>[class^=col].links .row>[class^=col] {
 .product-miniature .regular-price {
     color: #7a7a7a;
     text-decoration: line-through;
-    font-size: .875rem;
+    font-size: 16px;
+    font-family: Roboto;
     display: inline-block
 }
 
