--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -315,9 +315,16 @@
                                             margin: 0;
                                             position: absolute;
                                             right: 10px;
+
+                                            .product-discount {
+                                                margin-bottom: 0;
+                                            }
                                             .product-price {
                                                 margin: 0;
                                                 .current-price {
+                                                    .discount-percentage {
+                                                        font-size: 12px;
+                                                    }
                                                     margin: 0;
                                                     span {
                                                         font-size: 16px;
