--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -318,10 +318,14 @@
 
                                             .product-discount {
                                                 margin-bottom: 0;
+                                                position: absolute;
+                                                right: -8px;
+                                                bottom: 50px;
                                             }
                                             .product-price {
                                                 margin: 0;
                                                 .current-price {
+                                                    margin-top: 40px;
                                                     .discount-percentage {
                                                         font-size: 12px;
                                                     }
