--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -325,7 +325,7 @@
                                             .product-price {
                                                 margin: 0;
                                                 .current-price {
-                                                    margin-top: 40px;
+                                                    margin-top: 40px!important;
                                                     span {
                                                         &:first-child {
                                                             margin-bottom: 5px;
