--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -321,6 +321,11 @@
                                                 position: absolute;
                                                 right: -8px;
                                                 bottom: 50px;
+
+                                                @media (max-width: 768px) {
+                                                    right: 11px;
+                                                }
+
                                             }
                                             .product-price {
                                                 margin: 0;
