--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -146,16 +146,24 @@
 }
 
 .header-banner {
-    background-color: #FCE8D9;
-    padding: 10px 0;
-    position: relative;
+    position: none;
+    top: 0;
+    width: 100%;
+    z-index: 99999;
 
-    p {
-        text-align: center;
-        margin-bottom: 0;
-        color: $black;
-        letter-spacing: 0.5px;
-        font-size: 17px;
+    >div {
+        background-color: #FCE8D9;
+        padding: 10px 0;
+        position: relative;
+
+        p {
+            text-align: center;
+            margin-bottom: 0;
+            color: $black;
+            letter-spacing: 0.5px;
+            font-size: 17px;
+        }
+
     }
 }
 
@@ -163,18 +171,6 @@
 
 @media (min-width: 1200px) {
     #header {
-        .header-banner {
-            background-color: #FCE8D9;
-            padding: 10px 0;
-            position: relative;
-
-            p {
-                text-align: center;
-                margin-bottom: 0;
-                color: $black;
-                letter-spacing: 0.5px;
-            }
-        }
         .header-nav {
             max-height: 100%;
             margin-top: 80px;
