remove banniere avec le bon css ekdjkewj

--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -146,10 +146,11 @@
 }
 
 .header-banner {
-    position: none;
+    position: fixed;
     top: 0;
     width: 100%;
     z-index: 99999;
+    display: none;
 
     >div {
         background-color: #FCE8D9;
