remove banner j'en ai marre

--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -156,6 +156,7 @@
         background-color: #FCE8D9;
         padding: 10px 0;
         position: relative;
+        display: none;
 
         p {
             text-align: center;
