--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -502,9 +502,10 @@
 }
 
 .info-detailed .info-detailed-title i {
-    position: absolute;
+    /* position: absolute;
     top: 10px;
-    right: 10px;
+    right: 10px; */
+    display: none;
 }
 
 .info-detailed table {
