--- a/assets/scss/coffret.scss
+++ b/assets/scss/coffret.scss
@@ -4,16 +4,41 @@
 
         .product-information {
             .product-actions {
-                bottom: -190px!important;
+                @media screen and (min-width: 769px) {
+                    bottom: -190px!important;
+                }
+
+                .add {
+                    .yuka {
+                        img {
+                            display: none;
+                        }
+                    }
+                }
             }
         }
     }
-
-    .product-accessories{
-        .products {
-            grid-gap: 45px;
-
-        }
-    } 
 }
+
+
+.coffret_noel {
+    .products {
+        grid-gap: 45px;
+
+        > div {
+            height: 600px;
+            .product-miniature {
+                .info-detailed {
+                    position: absolute;
+                    bottom: -50px;
+                }
+
+                .add-to-cart-or-refresh,
+                .product-price-and-shipping {
+                    display: none;
+                }
+            }
+        }
+    }
+} 
 
