--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -498,14 +498,12 @@
 .info-detailed .info-detailed-title h2 {
     padding: 15px 0;
     margin: 0;
-    border-top: 1px solid #ccc;
 }
 
 .info-detailed .info-detailed-title i {
-    /* position: absolute;
+    position: absolute;
     top: 10px;
-    right: 10px; */
-    display: none;
+    right: 0;
 }
 
 .info-detailed table {
