--- a/assets/scss/coffret.scss
+++ b/assets/scss/coffret.scss
@@ -26,11 +26,13 @@
         grid-gap: 45px;
 
         > div {
-            height: 700px;
+            height: 600px;
+            margin-bottom: 0;
             .product-miniature {
                 .info-detailed {
+                    width: 100%;
                     position: absolute;
-                    top: 60%;
+                    top: 78%;
                 }
 
                 .add-to-cart-or-refresh,
@@ -38,6 +40,8 @@
                     display: none;
                 }
             }
+
+            
         }
     }
 } 
@@ -45,7 +49,7 @@
 .chutney {
     .info-detailed {
         position: absolute;
-        top: 54%!important;
+        top: 72%!important;
     } 
 }
 
