--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -139,7 +139,7 @@
                     }
                 }
                 .info-detailed {
-                    @media screen and (min-width: 1024px) {
+                    
                         .collapse {
                             display: block;
                             height: auto !important;
@@ -150,17 +150,17 @@
                             height: unset !important;
                             overflow: hidden;
                         }
-                    }
+                    
                     @media screen and (max-width: 480px) {
                         padding-left: 0;
                     }
-                    // @media screen and (max-width: 767px) {
-                    //     .info-all .collapse-icons i.material-icons {
-                    //         position: absolute;
-                    //         top: 10px;
-                    //         right: 10px;
-                    //     }
-                    // }
+                    
+                    .info-all .collapse-icons i.material-icons {
+                        position: absolute;
+                        top: 10px;
+                        right: 10px;
+                    }
+                    
                     font-size: 14px;
                     .info-detailed-title {
                         position: relative;
