correction margin bottom

--- a/assets/scss/coffret.scss
+++ b/assets/scss/coffret.scss
@@ -27,7 +27,7 @@
 
         > div {
             height: 600px;
-            margin-bottom: 0;
+            margin-bottom: 0!important;
             .product-miniature {
                 .info-detailed {
                     width: 100%;
