--- a/assets/scss/product.scss
+++ b/assets/scss/product.scss
@@ -811,8 +811,10 @@
 
                 .product-miniature {
                     .product-img {
-                        width: 290px;
-                        height: 290px;
+                        @media (min-width: 961px) {
+                            width: 290px;
+                            height: 290px;
+                        }
 
                         @media (min-width: 769px) and (max-width: 960px) {
                             max-width: 290px;
