--- a/assets/scss/coffret.scss
+++ b/assets/scss/coffret.scss
@@ -64,9 +64,10 @@
 } 
 
 .chutney {
-    div {
+    .products {
         div {
             &:last-child {
+                height: auto!important;
                 .info-detailed {
                     position: absolute;
                     top: 56%!important;
