--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -595,5 +595,21 @@
 .category-id-89 {
     h1 {
         color: #fff!important;
+        
+        @media (max-width: 768px) {
+            color: #000;
+        }
+    }
+}
+
+#module-thegiftcard-page {
+    .giftcard_product {
+        margin: 0 auto;
+
+        .category-name {
+            font-family: 'RobotoMono'!important;
+            font-size: 24px!important;
+            font-weight: 100!important;
+        }
     }
 }
