ptdr je suis un gland c'était un id lolilolilol

--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -603,7 +603,7 @@
 }
 
 #module-thegiftcard-page {
-    .giftcard_product {
+    #giftcard_product {
         margin: 0 auto;
 
         .category-name {
