--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -597,7 +597,7 @@
         color: #fff!important;
         
         @media (max-width: 768px) {
-            color: #000;
+            color: #000!important;
         }
     }
 }
